Made the console output visible, improved a bit the UI for the file tree and disable start, stop, restart plone buttons, if plone is up or down accordingly

--- a/collective/ploneide/ploneide/resources/ploneide.css
+++ b/collective/ploneide/ploneide/resources/ploneide.css
@@ -187,7 +187,9 @@
     margin-bottom: 5px;
 }
 #tree-placeholder {
-
+    overflow: scroll;
+    max-height: 480px;
+    white-space: nowrap;
 }
 
 
